# july_2025_cambridge_training

./: .gitignore  README.md
code/: Cargo.toml
code/bonus/py/string_sum/: Cargo.toml  fibo_multi.py  fibo_rust.py  pyproject.toml
code/bonus/py/string_sum/src/: lib.rs
code/bonus/py_from_rust/: Cargo.toml
code/bonus/py_from_rust/src/: main.rs  python_program.py
code/day1/login_cli/: Cargo.toml
code/day1/login_cli/src/: main.rs
code/day1/login_library/: Cargo.toml
code/day1/login_library/src/: lib.rs
code/day1/rooms_library/: Cargo.toml
code/day1/rooms_library/src/: lib.rs
code/day1/rooms_walker/: Cargo.toml  rooms.json
code/day1/rooms_walker/src/: main.rs
code/day1/serialize/: Cargo.toml
code/day1/serialize/src/: main.rs
code/day2/channel_bench/: Cargo.toml
code/day2/channel_bench/src/: main.rs
code/day2/login_cli2/: Cargo.toml
code/day2/login_cli2/src/: main.rs
code/day2/login_library2/: Cargo.toml
code/day2/login_library2/src/: lib.rs
code/day2/rooms_library2/: Cargo.toml
code/day2/rooms_library2/src/: lib.rs
code/day2/rooms_walker2/: Cargo.toml
code/day2/rooms_walker2/src/: main.rs
code/day2/sync_mud_client/: Cargo.toml
code/day2/sync_mud_client/src/: main.rs
code/day2/sync_mud_client_state/: Cargo.toml
code/day2/sync_mud_client_state/src/: main.rs
code/day2/sync_mud_proto/: Cargo.toml
code/day2/sync_mud_proto/src/: lib.rs
code/day2/sync_mud_proto_state/: Cargo.toml
code/day2/sync_mud_proto_state/src/: lib.rs
code/day2/sync_mud_server/: Cargo.toml  users.json
code/day2/sync_mud_server/src/: main.rs
code/day2/sync_mud_server_state/: Cargo.toml
code/day2/sync_mud_server_state/src/: main.rs
code/day2/tcp_echo/: Cargo.toml
code/day2/tcp_echo/src/: main.rs
code/day2/tester/src/: lib.rs
code/day2/tester/tests/: integration-test.rs
code/day2/tracing_json/: Cargo.toml
code/day2/tracing_json/src/: main.rs
code/day2/tracing_simple/: Cargo.toml
code/day2/tracing_simple/src/: main.rs
code/day2/tracing_simple2/: Cargo.toml
code/day2/tracing_simple2/src/: main.rs
code/day2/tracing_spans/: Cargo.toml
code/day2/tracing_spans/src/: main.rs
code/day2/ws_primes/: Cargo.toml
code/day2/ws_primes/src/: main.rs
code/day3/actor_example/: Cargo.toml
code/day3/actor_example/src/: main.rs  world_state.rs
code/day3/async_join/: Cargo.toml
code/day3/async_join/src/: main.rs
code/day3/async_mud_client/: Cargo.toml
code/day3/async_mud_client/src/: main.rs
code/day3/async_mud_proto/: Cargo.toml
code/day3/async_mud_proto/src/: lib.rs
code/day3/async_mud_server/: Cargo.toml  users.json
code/day3/async_mud_server/src/: main.rs  world_manager.rs
code/day3/async_select/: Cargo.toml
code/day3/async_select/src/: main.rs
code/day3/async_tcp_echo/: Cargo.toml
code/day3/async_tcp_echo/src/: main.rs
code/live/buckets/: Cargo.toml
manual/: book.toml
manual/src/: SUMMARY.md  d  da
manual/src/bonus/ff1/: rust_to_c.md
manual/src/bonus/python/: hello_python.md
manual/src/day1/: 08  wrapup.md
manual/src/day1/01_intro/: format.md  herbert.md  welcome.md
manual/src/day2/: intro.md  wrapup.md
manual/src/day3/: intro.md  thank_you.md  wrapup.md
manual/src/design/: dependency_management.md  global_state.md  panic_handling.md  project_layout.md
(+114 files in other folders)
