[package]
name = "code"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [ 
    "day1/serialize",
    "day1/login_library", "day1/login_cli", "day1/rooms_library", "day1/rooms_walker",
]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.46.0", features = ["full"] }
anyhow = "1.0.98"
tonic = "0.13.1"
prost = "0.13.1"
tokio-stream = "0.1.17"
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
