[package]
name = "code"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [ 
    "day1/serialize",
    "day1/login_library", 
    "day1/login_cli", 
    "day1/rooms_library", 
    "day1/rooms_walker", 
    
    "day2/tracing_simple", 
    "day2/tracing_simple2", 
    "day2/tracing_spans", 
    "day2/tracing_json", 
    "day2/login_cli2", 
    "day2/rooms_library2", 
    "day2/rooms_walker2", "day2/login_library2", "day2/tester", "day2/ws_primes", "day2/channel_bench", "day2/tcp_echo", "day2/sync_mud_server", "day2/sync_mud_proto", "day2/sync_mud_client", "day2/sync_mud_server_state", "day2/sync_mud_proto_state", "day2/sync_mud_client_state",
]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["fmt", "env-filter", "json"]}
tokio = { version = "1.46.0", features = ["full"] }
anyhow = "1.0.98"
tonic = "0.13.1"
prost = "0.13.1"
tokio-stream = "0.1.17"
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.30"

