[package]
name = "sync_mud_server_state"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
rooms_library2 = { path = "../rooms_library2" }
login_library2 = { path = "../login_library2" }
tracing.workspace = true
tracing-subscriber.workspace = true
sync_mud_proto_state = { path = "../sync_mud_proto_state" }
once_cell = "1.20.0"  # For Lazy static initialization