[package]
name = "async_mud_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async_mud_proto = { path = "../async_mud_proto", features = [ "tokio" ] }
login_library2 = { path = "../../day2/login_library2" }
rooms_library2 = { path = "../../day2/rooms_library2" }
rand = "0.9.1"